# sqr-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev_run.sh  docker-compose.yml  requirements.txt
.github/actions/init/: action.yaml
.github/matchers/: flake8.json  pylint.json
.github/workflows/: pr.yaml
app/: main.py  run.sh
scripts/: dev_run.sh
src/: .pylintrc  pyproject.toml  run.sh
src/app/: main.py
src/fastapi_app/: .dockerignore  Dockerfile  pyproject.toml  run.sh
src/fastapi_app/app/: auth.py  db_client.py  di.py  main.py
src/fastapi_app/app/api/: health.py  task.py  user.py
src/fastapi_app/app/schemas/: task.py  user.py
src/fastapi_app/app/service/: task.py  user.py  utils.py
src/fastapi_app/app/shcemas/: task.py  user.py
src/fastapi_app/tests/: conftest.py
src/fastapi_app/tests/e2e/: test_tasks.py  test_users.py
src/fastapi_app/tests/service/: test_service_tasks.py  test_service_user.py  test_service_utils.py
src/fastapi_app/tests/unit/: test_db_client.py  test_service_tasks.py  test_service_user.py
src/streamlit_app/: Dockerfile  pyproject.toml  run.sh
src/streamlit_app/app/: main.py
src/streamlit_app/app/components/: login.py  tasks.py
src/streamlit_app/tests/selenium/: test_app.py
